# c-2d-game-engine

./: CMakeLists.txt  Makefile
assets/: Tileset.tsx  adventurer-v1.5-Sheet.tsx  collisiontiles-32.tsx  platformer_32_full.tsx  sidescroller.tmx  sidescroller2.tmx  sidescroller3.tmx
cmake/: FindGLEW.cmake  FindPackageHandleStandardArgs.cmake  SelectLibraryConfigurations.cmake
src/: main.c
src/engine/: animation.c  animation_sheet.c  background_map.c  collision_map.c  engine.c  engine.h  entity.c  game.c  input.c  parallax.c  system.c  texture.c  tileset.c  timer.c
src/entities/: npc.c  npc.h  player.c  player.h
src/libs/list/: list.c  list.h
